# Posture-Checker

./: .gitignore  LICENSE  README.md  pyproject.toml
PostureChecker/: Homepage.py  PoseDetector.py  app.py  interface.py  settings.py  stats.py
Tests/: PoseDetector.py  cam.py
Tests/streamlitTest/: streamlit_app.py
pyqt/: app_data.py  app_settings.py  main.py  main_window.py
pyqt/core/: pose_detector_thread.py
pyqt/widgets/: homepage_widget.py  pose_detector_widget.py  settings_widget.py  stats_widget.py
