[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "posture-checker"
version = "1.0.0"
description = "A simple real-time posture checker using OpenCV and MediaPipe Pose."
readme = "README.md"
authors = [
    { name = "Jackson Shepherd", email = "jpsheph@clemson.edu" }
]
requires-python = ">=3.8,<3.12"

dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0"
    "streamlit>=1.37.0"
]

[project.urls]
Homepage = "https://github.com/Jshepherd06/Posture-Checker"
Repository = "https://github.com/Jshepherd06/Posture-Checker"

[tool.setuptools]
packages = ["posture_checker"]

[tool.setuptools.package-dir]
posture_checker = "src/posture_checker"